# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

  04 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    Add a new carrier_timeout_eth0 setting just for Intel e1000 users on
    FreeBSD where the carrier takes far too long to come up at boot.
    This is very likely a hardware problem as Linux users have reported
    similar issues with netplug/ifplugd which does the same thing here.

  03 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    FreeBSD users can now specify a kernel dump device in conf.d/localmount
    Fixes #159643, thanks to Diego Pettenò.

    Save last used consolefont in /lib/rcscripts/console and apply
    in init.sh, #156604.

    Update ESSID/MAC wireless documentation, #159807 thanks to Michael Conrad.

  03 Jan 2007; Mike Frysinger <vapier@gentoo.org>:

    Add some more useful flags to rcscripts and document them (--debug/--help).

  30 Dec 2006; Mike Frysinger <vapier@gentoo.org>:

    Punt the old MAKEDEV script and move to MAKEDEV package from Fedora.

  29 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Use correct interface in example, #159396.

  19 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    start-stop-daemon now works with pidfiles that put extra data after the pid
    like postgresql.

    Only set remotename if we have a username, #104869 thanks to Alin Nastac.

    Use the mtime of /etc/{conf,init}.d directories too so depscan.sh works
    for newly added files. Partial fix for #158548.

    Only launch sulogin if we are actually in single user mode, #158615.

* baselayout-1.13.0_alpha10 (12 Dec 2006)

  18 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Reverted patch for #104869 as it's silly. Fixes #158174.

    Use LC_ALL=C for sort, #158328 thanks to Mike Frysinger.

    Match wireless encryption key reported against *, #158319 thanks to
    Robert Wolf.

    Replace tac with sed '1!G;h;$!d' as tac is in /usr, #158312.
